Solve data show on project page , X-axis-gap issue solve

--- a/public/assets/css/style2.css
+++ b/public/assets/css/style2.css
@@ -6095,7 +6095,11 @@ video {
 }
 
 .home3-success-stories-area .swiper-slide:nth-child(even) {
-  margin-top: 30px;
+ height: 330px !important;
+ width: 346px !important;
+ margin-top: 13px !important;
+
+  
 }
 
 @media (max-width: 1199px) {
@@ -6112,9 +6116,9 @@ video {
 
 .home3-success-stories-area .success-storie-card .success-img {
   border-radius: 5px;
+ 
 
 }
-
 .home3-success-stories-area .success-storie-card .success-img img {
   border-radius: 5px;
   width: 100%;
